# sar-supervisor

./: .env  .env.example  .gitignore  CLAUDE.md  harness.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: stop-check.sh
.claude/rules/: autonomous-operation.md  dot-claude-management.md  no-direct-supervised-repo.md  no-raw-revert.md  pixi-and-python.md  prompt-edits.md  researcher-variant-merge.md
.claude/skills/clean/: SKILL.md
.claude/skills/edit-prompts/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/start-research/: SKILL.md
.claude/skills/stop/: SKILL.md
.claude/skills/stop-research/: SKILL.md
experiments/: compare_experiments.py  run_experiment.sh
experiments/variants/: EXAMPLE-variant.md  balanced-methodology.md  evaluator-direct.md  multi-gold-recall.md  precision-safe-recall.md  semantic-chunking.md
src/supervisor_harness/: __init__.py  cli.py  config.py  prompt_editor.py  stop_hook.py  stream_json.py  supervisor.py
tests/: test_clone_isolation.py  test_e2e.py  test_edge_cases.py  test_harness.py  test_merge_strategies.py  test_profile_rotation.py  test_variant_lifecycle.py
tests/fixtures/: sample_stream.jsonl
