[project]
name = "sar-supervisor"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = []

[project.scripts]
sar-supervisor = "supervisor_harness.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/supervisor_harness"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
sar-supervisor = { path = ".", editable = true }
sar-harness-core = { path = "../sar-harness-core", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
# Researcher management (child): <child>-<action> pattern
researcher-loop = "PYTHONPATH=src python -m supervisor_harness.cli loop"
researcher-loop-once = "PYTHONPATH=src python -m supervisor_harness.cli loop --once"
researcher-monitor = "PYTHONPATH=src python -m supervisor_harness.cli monitor --follow"
researcher-watch-status = "PYTHONPATH=src python -m supervisor_harness.cli watch-status --interval-seconds 30"
researcher-snapshot = "PYTHONPATH=src python -m supervisor_harness.cli snapshot"
researcher-history = "PYTHONPATH=src python -m supervisor_harness.cli history --limit 20"
researcher-status = "PYTHONPATH=src python -m supervisor_harness.cli status"
researcher-stop = "PYTHONPATH=src python -m supervisor_harness.cli stop"
researcher-start = "PYTHONPATH=src python -m supervisor_harness.cli start"
researcher-restart = "PYTHONPATH=src python -m supervisor_harness.cli restart"
researcher-dot-claude-list = "PYTHONPATH=src python -m supervisor_harness.cli prompt-list"
researcher-dot-claude-read = { cmd = "PYTHONPATH=src python -m supervisor_harness.cli prompt-read", depends-on = [] }
researcher-dot-claude-edit = { cmd = "PYTHONPATH=src python -m supervisor_harness.cli prompt-edit", depends-on = [] }
researcher-dot-claude-diff = { cmd = "PYTHONPATH=src python -m supervisor_harness.cli prompt-diff", depends-on = [] }
researcher-dot-claude-delete = { cmd = "PYTHONPATH=src python -m supervisor_harness.cli prompt-delete", depends-on = [] }
researcher-dot-claude-history = "PYTHONPATH=src python -m supervisor_harness.cli prompt-history"
researcher-restore = { cmd = "PYTHONPATH=src python -m supervisor_harness.cli restore", depends-on = [] }
researcher-revert-safe = "PYTHONPATH=src python -m supervisor_harness.cli revert-safe"
researcher-variant = { cmd = "PYTHONPATH=src python -m supervisor_harness.cli variant", depends-on = [] }
# Self management: <action> pattern
clean = "PYTHONPATH=src python -m supervisor_harness.cli clean --include-log"

[tool.pixi.feature.dev.tasks]
test = "PYTHONPATH=src python -m pytest tests/ -v"

[tool.pixi.dependencies]
python = "3.14.*"

[dependency-groups]
dev = ["pytest>=8,<9", "pytest-timeout>=2,<3", "pytest-xdist>=3,<4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "-n", "auto", "--dist", "loadgroup", "--junitxml=test-results.xml"]
timeout = 30
markers = ["e2e: end-to-end tests requiring real Claude sessions (slow, run with -m e2e)"]
